--- a/gfarm_v2/trunk/doc/docbook/en/ref/man1/gfsched.1.docbook
+++ b/gfarm_v2/trunk/doc/docbook/en/ref/man1/gfsched.1.docbook
@@ -3,7 +3,7 @@
 
 <refentry id='gfsched.1'>
 
-<refentryinfo><date>12 Nov 2006</date></refentryinfo>
+<refentryinfo><date>28 Ju 2010</date></refentryinfo>
 
 <refmeta>
 <refentrytitle>gfsched</refentrytitle>
@@ -13,26 +13,35 @@
 
 <refnamediv id='name'>
 <refname>gfsched</refname>
-<refpurpose>create a host file using file-affinity scheduling</refpurpose>
+<refpurpose>
+<!-- create a host file using file-affinity scheduling -->
+schedule and display available filesystem nodes
+</refpurpose>
 </refnamediv>
 
 <refsynopsisdiv id='synopsis'>
 
 <cmdsynopsis>
   <command>gfsched</command>
-    <arg choice='opt'>-U</arg>
+   <!--
     <arg choice='opt'>-I <replaceable>fragment-index</replaceable></arg>
     <arg choice='opt'>-p <replaceable>gfarm-program-URL</replaceable></arg>
-    <arg choice='plain'><replaceable>gfarm-URL</replaceable></arg>
-    <arg choice='opt'><replaceable>output-hostfile</replaceable></arg>
+   -->
+    <arg choice='opt'>-f <replaceable>gfarm-URL</replaceable></arg>
+    <arg choice='opt'>-n <replaceable>number</replaceable></arg>
+    <arg choice='opt'>-LMlw</arg>
 </cmdsynopsis>
 
 <cmdsynopsis>
   <command>gfsched</command>
-    <arg choice='opt'>-U</arg>
+   <!--
     <arg choice='plain'>-N <replaceable>number</replaceable></arg>
     <arg choice='opt'>-p <replaceable>gfarm-program-URL</replaceable></arg>
-    <arg choice='opt' rep='repeat'><replaceable>host</replaceable></arg>
+   -->
+    <arg choice='opt'>-P <replaceable>gfarm-URL</replaceable></arg>
+    <arg choice='opt'>-D <replaceable>number</replaceable></arg>
+    <arg choice='opt'>-n <replaceable>number</replaceable></arg>
+    <arg choice='opt'>-LMlw</arg>
 </cmdsynopsis>
 
 </refsynopsisdiv>
@@ -41,22 +50,26 @@
 
 <refsect1 id='description'><title>DESCRIPTION</title>
 <para>
-  <command>gfsched</command> creates a host file
+  The <command>gfsched</command> command
+  with a <option>-f</option> <parameter>gfarm-URL</parameter> option
+  displays available filesystem nodes which have a file replica of the
+  specified gfarm-URL.
+<!--
+  The <command>gfsched</command> command displays a host list
   using the file-affinity scheduling of <parameter>gfarm-URL</parameter>.
-  In other words, <command>gfsched</command> chooses and displays
+  In other words, the <command>gfsched</command> command chooses and displays
   hostnames, matching the number with the fragments of
   the <parameter>gfarm-URL</parameter>, giving priority, as far as possible to
   the host which has the fragment.
-  When <parameter>output-hostfile</parameter> is omitted,
-  <command>gfsched</command> displays to the standard output.
+-->
 </para>
 
 <para>
-  If <option>-N</option> is specified instead of 
-  <parameter>gfarm-URL</parameter>, <command>gfsched</command> chooses and
-  displays a specified number of hosts from the hosts in the arguments.
-  If no hosts are specified in the argument, <command>gfsched</command>
-  chooses hosts from all registered hosts.
+  When a <option>-f</option> <parameter>gfarm-URL</parameter> option
+  is not specified, the <command>gfsched</command> command just displays
+  available filesystem nodes.  In this case, you can specify a metadata
+  server by a <option>-P</option> <parameter>gfarm-URL</parameter> option,
+  if necessary.
 </para>
 
 </refsect1>
@@ -64,29 +77,15 @@
 <refsect1 id='options'><title>OPTIONS</title>
 <variablelist>
 
+<!--
 <varlistentry>
 <term><option>-I</option> <parameter>fragment-index</parameter></term>
 <listitem>
 <para>Specifies the fragment index to be scheduled.
-<!--
 If the <parameter>gfarm-URL</parameter> is an executable file,
 an architecture name, for example, sparc-sun-solaris8,
 can be used to select a host which holds the executable file
 for the architecture.
--->
-</para>
-</listitem>
-</varlistentry>
-
-<varlistentry>
-<term><option>-U</option></term>
-<listitem>
-<para>Suppresses authentication check.
-Without this option, the scheduler checks whether the user will be 
-successfully authenticated with the hosts or not.
-This option omits the check to make scheduling faster,
-but that creates a risk that hosts which fail authentication with
-the user may be scheduled.
 </para>
 </listitem>
 </varlistentry>
@@ -101,6 +100,97 @@ will be selected, if this option is specified.
 </para>
 </listitem>
 </varlistentry>
+-->
+
+<varlistentry>
+<term><option>-D</option> <parameter>domain-name4</parameter></term>
+<listitem>
+<para>Limits filesystem node by specifying a domain name or a hostname.
+</para>
+<para>Currently, this option doesn't work with the <option>-f</option> option.
+</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><option>-L</option></term>
+<listitem>
+<para>Suppresses authentication check.
+Without this option, the scheduler checks whether the user will be 
+successfully authenticated with the hosts or not.
+This option omits the check to make scheduling faster,
+but that creates a risk that hosts which fail authentication with
+the user may be scheduled.
+</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><option>-M</option></term>
+<listitem>
+<para>Suppresses client-side scheduling and only performs metadata-server-side
+scheduling.
+This option makes scheduling faster,
+but also creates a risk that hosts which is network-unreachable or
+fails authentication with the user may be scheduled.
+</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><option>-P</option> <parameter>gfarm-URL</parameter></term>
+<listitem>
+<para>Specifies a <parameter>gfarm-URL</parameter> or a pathname
+to identify a metadata server which is used for the scheduling.
+This option conflicts with an <option>-f</option>.
+</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><option>-f</option> <parameter>gfarm-URL</parameter></term>
+<listitem>
+<para>The <command>gfsched</command> command schedules filesystem nodes
+which have a replica of a file specified by this option.
+This option conflicts with a <option>-P</option> option.
+</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><option>-l</option></term>
+<listitem>
+<para>Long format.
+This option displays port numbers as well as hostnames.
+Note that the display format of this option may be changed in future.
+</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><option>-n</option> <parameter>number</parameter></term>
+<listitem>
+<para>Displays specified number of filesystem nodes at most.
+If this option is not specified, it displays all available nodes.
+</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><option>-w</option></term>
+<listitem>
+<para>Schedules with write-mode.
+When this option is specified, filesystem nodes which don't have
+enough free space won't be displayed.
+</para>
+<para>
+When both this option and an <option>-f</option> are specified,
+and if the file is already opened by an existing process with write-mode,
+the <command>gfsched</command> command only displays one filesystem node
+which is assigned for writing to the file.
+</para>
+</listitem>
+</varlistentry>
 
 <varlistentry>
 <term><option>-?</option></term>
@@ -111,4 +201,15 @@ will be selected, if this option is specified.
 
 </variablelist>
 </refsect1>
+
+<refsect1 id='examples'><title>EXAMPLES</title>
+<para>
+The following is an example to inquire filesystem nodes that the metadata
+server thinks they are currently working.
+</para>
+<literallayout>
+$ gfsched -M
+</literallayout>
+</refsect1>
+
 </refentry>
