--- a/gfarm_v2/trunk/doc/docbook/ja/ref/man1/gfsched.1.docbook
+++ b/gfarm_v2/trunk/doc/docbook/ja/ref/man1/gfsched.1.docbook
@@ -3,7 +3,7 @@
 
 <refentry id='gfsched.1'>
 
-<refentryinfo><date>19 Aug 2003</date></refentryinfo>
+<refentryinfo><date>28 Jun 2010</date></refentryinfo>
 
 <refmeta>
 <refentrytitle>gfsched</refentrytitle>
@@ -13,7 +13,8 @@
 <refnamediv id='name'>
 <refname>gfsched</refname>
 <refpurpose>
-ファイル・アフィニティ・スケジューリングによりホストリストを作成
+<!-- ファイル・アフィニティ・スケジューリングによりホストリストを作成 -->
+ファイルシステムノードをスケジューリングし、利用可能なノードを表示
 </refpurpose>
 </refnamediv>
 
@@ -21,19 +22,25 @@
 
 <cmdsynopsis>
   <command>gfsched</command>
-    <arg choice='opt'>-U</arg>
+   <!--
     <arg choice='opt'>-I <replaceable>フラグメント番号</replaceable></arg>
     <arg choice='opt'>-p <replaceable>プログラムURL</replaceable></arg>
-    <arg choice='plain'><replaceable>gfarm-URL</replaceable></arg>
-    <arg choice='opt'><replaceable>output-hostfile</replaceable></arg>
+   -->
+    <arg choice='opt'>-f <replaceable>gfarm-URL</replaceable></arg>
+    <arg choice='opt'>-n <replaceable>ノード数</replaceable></arg>
+    <arg choice='opt'>-LMlw</arg>
 </cmdsynopsis>
 
 <cmdsynopsis>
   <command>gfsched</command>
-    <arg choice='opt'>-U</arg>
+   <!--
     <arg choice='plain'>-N <replaceable>ノード数</replaceable></arg>
     <arg choice='opt'>-p <replaceable>プログラムURL</replaceable></arg>
-    <arg choice='opt' rep='repeat'><replaceable>ホスト名</replaceable></arg>
+   -->
+    <arg choice='opt'>-P <replaceable>gfarm-URL</replaceable></arg>
+    <arg choice='opt'>-D <replaceable>ドメイン名</replaceable></arg>
+    <arg choice='opt'>-n <replaceable>ノード数</replaceable></arg>
+    <arg choice='opt'>-LMlw</arg>
 </cmdsynopsis>
 
 </refsynopsisdiv>
@@ -42,21 +49,24 @@
 
 <refsect1 id='description'><title>DESCRIPTION</title>
 <para>
-  <parameter>gfarm-URL</parameter> を指定した場合、
+  <command>gfsched</command> に
+  <option>-f</option> <parameter>gfarm-URL</parameter> オプションを
+  指定した場合、そのgfarmファイルを保持するファイルシステムノードの
+  うちで、現在利用可能なもの表示します。
+<!--
   そのgfarmファイルに対する
-  ファイル・アフィニティ・スケジューリングによりホストリストを作成します。
+  ファイル・アフィニティ・スケジューリングによりホストリストを表示します。
   すなわち、そのgfarmファイル・フラグメントを保持するホストをできる限り
   優先して、フラグメント数と等しい数のホストを選んで表示します。
-  <parameter>output-hostfile</parameter> が省略された場合、
-  標準出力にホストリストを表示します。
+-->
 </para>
 
 <para>
-  <parameter>gfarm-URL</parameter> を指定するのではなく、
-  <option>-N</option> でホスト数を指定した場合、
-  引数で指定したホストの中から、指定した数のホストを選んで表示します。
-  ホストの指定を省略した場合、登録されている全てのホストから指定した
-  数のホストを選びます。
+  <option>-f</option>オプションを指定しなかった場合、利用可能な
+  ファイルシステムノードを表示します。この場合、
+  <option>-P</option> <parameter>gfarm-URL</parameter> オプションで
+  パス名か gfarm URL を指定することにより、表示対象のメタデータサーバを
+  切替えることができます。
 </para>
 
 </refsect1>
@@ -64,25 +74,14 @@
 <refsect1 id='options'><title>OPTIONS</title>
 <variablelist>
 
+<!--
 <varlistentry>
 <term><option>-I</option> <parameter>フラグメント番号</parameter></term>
 <listitem>
 <para>特定のファイル断片についてホストを1つ選択します。
-<!--
 実行形式のファイルの場合には、このオプションで実行アーキテクチャ
 (例 「sparc-sun-solaris8」) を指定することによって、
 そのアーキテクチャの実行形式ファイルを保持するホストを1つ選択します。
--->
-</para>
-</listitem>
-</varlistentry>
-
-<varlistentry>
-<term><option>-U</option></term>
-<listitem>
-<para>そのホストに対して、認証が成功するか否かの確認を省略します。
-高速になりますが、認証不能なホストがスケジューリングされてしまう
-危険があります。
 </para>
 </listitem>
 </varlistentry>
@@ -96,6 +95,95 @@
 </para>
 </listitem>
 </varlistentry>
+-->
+
+<varlistentry>
+<term><option>-D</option> <parameter>ドメイン名</parameter></term>
+<listitem>
+<para>ドメイン名ないしホスト名を指定し、検索対象のファイルシステムノードを
+絞ります。
+</para>
+<para>現在のところ、このオプションと <option>-f</option>オプションを
+同時に使うことはできません。
+</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><option>-L</option></term>
+<listitem>
+<para>そのホストに対して、認証が成功するか否かの確認を省略します。
+高速になりますが、認証不能なホストがスケジューリングされてしまう
+危険があります。
+</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><option>-M</option></term>
+<listitem>
+<para>メタデータサーバに問い合わせた結果のみを表示し、クライアント側での
+スケジューリング処理を行ないません。
+このオプションを指定すると、動作は高速になりますが、ネットワーク的に到
+達不能なホストや、認証不能なホストが表示される危険があります。
+</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><option>-P</option> <parameter>gfarm-URL</parameter></term>
+<listitem>
+<para>ファイルシステムノードを管理するメタデータサーバを特定する
+ために、gfarm-URL ないしパス名を指定します。
+このオプションは、<option>-f</option> オプションと排他的です。
+</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><option>-f</option> <parameter>gfarm-URL</parameter></term>
+<listitem>
+<para>指定したファイルについて、その複製を保持するファイルシステムノードを
+検索します。
+このオプションは、<option>-P</option> オプションと排他的です。
+</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><option>-l</option></term>
+<listitem>
+<para>ホスト名のみならず、ポート番号も表示します。
+このオプションの表示形式は、将来変更される可能性がありますのでご注意ください。
+</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><option>-n</option> <parameter>ノード数</parameter></term>
+<listitem>
+<para>指定した数をファイルシステムノードの表示を試みます。
+ノード数がその数に満たない場合には、そこで表示を打ち切ります。
+このオプションを指定しない場合、条件を満たす全ノードを表示します。
+</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><option>-w</option></term>
+<listitem>
+<para>ファイルの書き込みを行なう前提で、スケジューリングを行ないます。
+このオプションを指定した場合、ディスクの空き容量が足りないファイルシステム
+ノードは除外されます。
+</para>
+<para>
+このオプションと、<option>-f</option> オプションを同時に指定し、
+かつ、そのファイルが既存のプロセスによって書き込みオープンされている場合には、
+<option>-n</option> の指定に関わらず、現在このファイルの書き込み用に
+割り当てられているファイルシステムノード 1つのみを表示します。
+</para>
+</listitem>
+</varlistentry>
 
 <varlistentry>
 <term><option>-?</option></term>
@@ -106,5 +194,16 @@
 
 </variablelist>
 </refsect1>
+
+<refsect1 id='examples'><title>EXAMPLES</title>
+<para>
+以下は、メタデータサーバが動作中であると把握している、ファイルシステムノードを
+問い合わせる例です。
+</para>
+<literallayout>
+$ gfsched -M
+</literallayout>
+</refsect1>
+
 </refentry>
 
