--- a/gfarm_v2/trunk/man/ja/man1/gfmkdir.1
+++ b/gfarm_v2/trunk/man/ja/man1/gfmkdir.1
@@ -3,18 +3,22 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFMKDIR" "1" "15 5月 2008" "Gfarm" ""
+.TH "GFMKDIR" "1" "15 December 2010" "Gfarm" ""
 
 .SH NAME
 gfmkdir \- Gfarm ディレクトリを作成する。
 .SH SYNOPSIS
 
-\fBgfmkdir\fR \fB\fIgfarmパス\fB\fR\fI ...\fR
+\fBgfmkdir\fR [ \fB\fIオプション\fB\fR ] \fB\fIgfarmパス\fB\fR\fI ...\fR
 
 .SH "DESCRIPTION"
 .PP
 Gfarmパスに指定したディレクトリを作成します。
 .SH "OPTIONS"
+.TP
+\fB-p\fR
+指定したディレクトリが存在してもエラーにしません。
+必要に応じて親ディレクトリを作成します。
 .TP
 \fB-?\fR
 引数オプションを表示します。
